<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".compoent.splash.SplashActivity">
    <TextView
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textSize="24sp"/>
    <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:text="@string/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:textSize="24sp"/>
    <TextView
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="18dp"
            android:textSize="14sp"
            android:text="@string/copyright_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copyright"/>
</RelativeLayout>