<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large"
>

    <TextView
            android:id="@+id/term_service_privacy"
            android:text="@string/term_service_privacy"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView android:layout_width="match_parent"
                tools:layout_editor_absoluteX="97dp"
                tools:ignore="MissingConstraints"
                android:layout_height="250dp"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/term_service_privacy" android:id="@+id/scrollView2">
        <TextView
                android:text="@string/term_service_privacy_content"
                android:layout_marginTop="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/term_service_privacy"/>
    </ScrollView>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/primary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/super_button_height"
            android:layout_marginTop="@dimen/padding_meddle"
            android:text="@string/agree"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize"/>
    <Button
            android:id="@+id/disagree"
            android:text="@string/disagree"
            style="?android:attr/borderlessButtonStyle"
            android:paddingTop="@dimen/padding_small"
            android:textColor="?attr/colorOnSurface"
            android:background="@color/transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary" tools:ignore="VisualLintButtonSize"/>
</androidx.constraintlayout.widget.ConstraintLayout>
